--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2916,7 +2916,7 @@ img {
   right: 0;
   background: var(--white);
   border-top: 1px solid var(--gray-500);
-  z-index: 100;
+  z-index: 96;
 
   &__list {
     display: flex;
